# image_recognition_wire

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: image_recognition_wire_standalone_kinect.launch
parameters/: wire_viz.yaml
scripts/: recognitions_depth_map_projection
