<?xml version="1.0"?>
<package format="2">
  <name>image_recognition_wire</name>
  <version>0.0.0</version>
  <description>The image_recognition_wire package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>wire_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
